# VN

./: README.md  code.py  keep_alive.py  main.py  oldmain.py  pokemon.py  pokemon2  pyproject.toml  token.env
.cache/replit/: __replit_disk_meta.json
