[tool.poetry]
name = "repl_python3_UltimateCalcProg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
termcolor = "^1.1.0"
docx = "^0.2.4"
ipython = "^7.25.0"
discord = "^1.7.3"
Flask = "^2.0.1"
youtube_dl = "^2021.6.6"
pypokedex = "^1.6.0"
bs4 = "^0.0.1"
wikipedia = "^1.4.0"
python-dotenv = "^0.21.0"
removebg = "^0.04"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
